Add next() call

--- a/test.html
+++ b/test.html
@@ -17,5 +17,8 @@
         <p>
         <button onclick="testConnect();">Test Connection</button>
         </p>
+        <p>
+        <button onclick="instance.next()">Next</button>
+        </p>
     </body>
 </html>
