Add previous() call

--- a/test.html
+++ b/test.html
@@ -18,6 +18,7 @@
         <button onclick="testConnect();">Test Connection</button>
         </p>
         <p>
+        <button onclick="instance.previous()">Prev</button>
         <button onclick="instance.next()">Next</button>
         </p>
     </body>
