--- a/test.html
+++ b/test.html
@@ -21,5 +21,8 @@
         <button onclick="instance.previous()">Prev</button>
         <button onclick="instance.next()">Next</button>
         </p>
+        <p>
+        <button onclick="instance.playpause()">Play/Pause</button>
+        </p>
     </body>
 </html>
