--- a/test.html
+++ b/test.html
@@ -23,6 +23,7 @@
         </p>
         <p>
         <button onclick="instance.playpause()">Play/Pause</button>
+        <button onclick="instance.play()">Play</button>
         </p>
     </body>
 </html>
