--- a/test.html
+++ b/test.html
@@ -24,6 +24,7 @@
         <p>
         <button onclick="instance.playpause()">Play/Pause</button>
         <button onclick="instance.play()">Play</button>
+        <button onclick="instance.pause()">Pause</button>
         </p>
     </body>
 </html>
