--- a/test.html
+++ b/test.html
@@ -33,6 +33,8 @@
         </p>
         <p>
         <span id="volume">?</span>
+        <button onclick="instance.raiseVolume()">+</button>
+        <button onclick="instance.lowerVolume()">-</button>
         </p>
     </body>
 </html>
