[ratchet-ui] Implement previous and next buttons

--- a/ratchet-ui/index.html
+++ b/ratchet-ui/index.html
@@ -38,9 +38,9 @@
             </div>
 
             <div class="bar bar-standard bar-footer-secondary" style="min-height: 60px; padding-top:3px;text-align:center">
-                <span class="icon icon-btn icon-back"></span>
+                <span class="icon icon-btn icon-back" onclick="pulaski.previous()"></span>
                 <span class="icon icon-play icon-btn" onclick="pulaski.playpause()"></span>
-                <span class="icon icon-btn icon-forward"></span>
+                <span class="icon icon-btn icon-forward" onclick="pulaski.next()"></span>
             </div>
 
             <nav class="bar bar-tab">
